2011-11-16  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/AutotoolsConfigurationManager.java (saveConfigs): Fix
	URI creation to handle case where project has query.
	(getSavedConfigs): Ditto.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (createDirectory):
	Fix URI creation to handle the case whereby there is a query in the project URI.
	(runCommand): Use Process instead of IProcess.
	(runScript): Ditto.

2011-10-25  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/PkgconfigErrorResolution.java (run): Change
	to use Process instead of IProcess.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (runCommand): Ditto.
	(runScript): Ditto.

2011-10-14  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java: Fix all
	remote file accesses to use getLocationURI for resources such as project rather than getLocation
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/AutotoolsConfigurationManager.java: Ditto.
	which will return null on remote resources.

2011-10-07  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Add dependency on org.eclipse.linuxtools.profiling.launch.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java: Use new
	IRemoteCommandLauncher interface and handle refactoring of remote proxy classes into Profiling
	component.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/PkgconfigErrorResolution.java: Ditto.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/AutotoolsConfigurationManager.java: Ditto.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/LocalFileProxy.java: Moved to profiling launch.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/FileProxyManager.java: Ditto.